--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "rimraf dist && rimraf doc && rollup --bundleConfigAsCjs --config rollup.config.ts --configPlugin typescript",
     "dev": "rollup --config --bundleConfigAsCjs rollup.config.ts --configPlugin typescript -w",
-    "test": "jest"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "repository": {
     "type": "git",
@@ -39,6 +39,7 @@
     "rollup": "^4.18.0",
     "ts-jest": "^29.1.3",
     "tslib": "^2.6.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "vite": "^5.2.12"
   }
 }
