--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "tslib": "^2.6.2",
     "typescript": "^5.4.5",
     "vite": "^5.2.12"
+  },
+  "dependencies": {
+    "@rollup/pluginutils": "^5.1.0"
   }
 }
