--- a/packages/postcss/package.json
+++ b/packages/postcss/package.json
@@ -27,6 +27,9 @@
     "url": "https://github.com/pastweb/postcss-utility-modules/issues"
   },
   "homepage": "https://github.com/pastweb/postcss-utility-modules#readme",
+  "dependencies": {
+    "@rollup/pluginutils": "^5.1.0"
+  },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.8",
     "@rollup/plugin-node-resolve": "^15.2.3",
@@ -39,10 +42,6 @@
     "rollup": "^4.18.0",
     "ts-jest": "^29.1.3",
     "tslib": "^2.6.2",
-    "typescript": "^5.4.5",
-    "vite": "^5.2.12"
-  },
-  "dependencies": {
-    "@rollup/pluginutils": "^5.1.0"
+    "typescript": "^5.4.5"
   }
 }
