--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "rimraf dist && rimraf doc && rollup --bundleConfigAsCjs --config rollup.config.ts --configPlugin typescript",
     "dev": "rollup --config --bundleConfigAsCjs rollup.config.ts --configPlugin typescript -w",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+    "test": "node --experimental-vm-modules ../../node_modules/jest/bin/jest.js"
   },
   "keywords": [
     "vite",
