--- a/packages/postcss/package.json
+++ b/packages/postcss/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "rimraf dist && rimraf doc && rollup --bundleConfigAsCjs --config rollup.config.ts --configPlugin typescript",
     "dev": "rollup --config --bundleConfigAsCjs rollup.config.ts --configPlugin typescript -w",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+    "test": "node ../../node_modules/jest/bin/jest.js"
   },
   "repository": {
     "type": "git",
