--- a/packages/vite/tsconfig.build.json
+++ b/packages/vite/tsconfig.build.json
@@ -1,9 +1,9 @@
 {
-  "extends": "./tsconfig.base",
+  "extends": "../../tsconfig.base",
   "compilerOptions": {
     "rootDir": "./src",
     "declarationDir": "dist/types",
-    "outDir": "dist",
+    "outDir": "dist"
   },
   "include": ["src"],
 }
