--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.9",
     "jest": "^29.7.0",
     "lerna": "^8.1.3",
     "typescript": "^5.4.5"
