--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -17,6 +17,9 @@
   ],
   "author": "Domenico Pasto",
   "license": "MIT",
+  "peerDependencies": {
+    "postcss": "*"
+  },
   "dependencies": {
     "@rollup/pluginutils": "^5.1.0"
   },
@@ -26,6 +29,7 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.9",
     "jest": "^29.7.0",
     "postcss": "^8.4.38",
     "rimraf": "^5.0.7",
