--- a/packages/vite/tsconfig.json
+++ b/packages/vite/tsconfig.json
@@ -6,6 +6,9 @@
     "types": ["node", "jest"],
     "declarationDir": "dist/types",
     "noEmit": true,
+    "paths": {
+      "postcss-utility-modules": ["../postcss"]
+    }
   },
   "include": ["rollup.config.ts"],
   "exclude": ["__tests__/**/*.test.ts"]
