--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@rollup/pluginutils": "^5.1.0",
+    "acorn": "^8.12.1",
     "acorn-walk": "^8.3.3"
   },
   "devDependencies": {
