--- a/packages/vite/examples/rimmel/package.json
+++ b/packages/vite/examples/rimmel/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --clearScreen=false --debug",
+    "dev": "vite --clearScreen=false --debug --force",
     "build": "vite build --clearScreen=false --debug",
     "preview": "vite preview --clearScreen=false --debug"
   },
@@ -12,6 +12,7 @@
     "vite": "^5.3.1"
   },
   "dependencies": {
-    "rimmel": "^1.1.1"
+    "rimmel": "^1.1.1",
+    "rxjs": "^7.8.1"
   }
 }
