--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -31,6 +31,7 @@
     "vite": "*"
   },
   "dependencies": {
+    "@pastweb/postcss-tools": "^1.0.0",
     "@rollup/pluginutils": "^5.1.0",
     "acorn": "^8.12.1",
     "acorn-walk": "^8.3.3"
