--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@pastweb/vite-plugin-css-tools",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "plugin for Css Utility Modules",
-  "main": "index.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
   "scripts": {
     "build": "rimraf dist && rimraf doc && rollup --bundleConfigAsCjs --config rollup.config.ts --configPlugin typescript",
     "dev": "rollup --config --bundleConfigAsCjs rollup.config.ts --configPlugin typescript -w",
@@ -31,7 +32,7 @@
     "vite": "*"
   },
   "dependencies": {
-    "@pastweb/postcss-tools": "^1.0.0",
+    "@pastweb/postcss-tools": "^1.0.1",
     "@rollup/pluginutils": "^5.1.0",
     "acorn": "^8.12.1",
     "acorn-walk": "^8.3.3"
