--- a/packages/postcss/package.json
+++ b/packages/postcss/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pastweb/postcss-tools",
+  "name": "@pastweb/atom-css-postcss",
   "version": "1.0.5",
   "description": "CSS tool set, modules, scoped CSS variables, utilities and nesting selectors",
   "main": "dist/index.cjs",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pastweb/css-tools.git"
+    "url": "git+https://github.com/pastweb/atom-css.git"
   },
   "keywords": [
     "cssmodules",
@@ -24,9 +24,9 @@
   "author": "Domenico Pasto",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/pastweb/css-tools/issues"
+    "url": "https://github.com/pastweb/atom-css/issues"
   },
-  "homepage": "https://github.com/pastweb/css-tools#readme",
+  "homepage": "https://github.com/pastweb/atom-css#readme",
   "files": [
     "dist",
     "LICENSE",
@@ -39,7 +39,7 @@
     "@rollup/plugin-commonjs": "^25.0.8",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^11.1.6",
+    "@rollup/plugin-typescript": "^12.1.1",
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
     "postcss": "^8.4.38",
