--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "@pastweb/vite-plugin-css-tools",
+  "name": "@pastweb/atom-css-vite",
   "version": "1.1.0",
-  "description": "plugin for Css Utility Modules",
+  "description": "plugin for Atom Css Utility Modules",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "types": "dist/types/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pastweb/css-tools.git"
+    "url": "git+https://github.com/pastweb/atom-css.git"
   },
   "bugs": {
-    "url": "https://github.com/pastweb/css-tools/issues"
+    "url": "https://github.com/pastweb/atom-css/issues"
   },
-  "homepage": "https://github.com/pastweb/css-tools/tree/master/packages/vite#readme",
+  "homepage": "https://github.com/pastweb/atom-css/tree/master/packages/vite#readme",
   "keywords": [
     "vite",
     "vite-plugin",
@@ -38,7 +38,7 @@
     "test": "node --experimental-vm-modules ../../node_modules/jest/bin/jest.js"
   },
   "dependencies": {
-    "@pastweb/postcss-tools": "^1.0.5",
+    "@pastweb/atom-css-postcss": "^1.0.5",
     "@rollup/pluginutils": "^5.1.0",
     "acorn": "^8.12.1",
     "acorn-walk": "^8.3.3"
