--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -38,11 +38,12 @@
     "test": "node --experimental-vm-modules ../../node_modules/jest/bin/jest.js"
   },
   "dependencies": {
-    "@pastweb/postcss-tools": "^1.0.5",
+    "@pastweb/atomic-css-postcss": "^1.0.6",
     "@rollup/pluginutils": "^5.1.0",
     "acorn": "^8.12.1",
     "acorn-walk": "^8.3.3",
-    "astring": "^1.9.0"
+    "astring": "^1.9.0",
+    "webpack-sources": "^3.2.3"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.8",
@@ -52,6 +53,7 @@
     "@rollup/plugin-typescript": "^12.1.1",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.9",
+    "@types/webpack-sources": "^3.2.3",
     "jest": "^29.7.0",
     "postcss": "^8.4.38",
     "rimraf": "^5.0.7",
